# CPP-Course-SerdiukSofia

./: CMakeLists.txt
homeworks/: homework_1.cpp  homework_10.cpp  homework_12.cpp  homework_13.cpp  homework_2.cpp  homework_3.cpp  homework_4.cpp  homework_5.cpp  homework_7.cpp  homework_8.cpp  homework_9.cpp
homeworks.cpp/: homework_1.cpp  homework_2.cpp  homework_3.cpp
homeworks/homework_15/: Rectangle.cpp  Rectangle.h  main15_h.cpp
homeworks/homework_16/: Figure3D.cpp  Figure3D.h  main16_h.cpp
homeworks/homework_17/: Int24.cpp  Int24.h  main17_h.cpp
homeworks/homework_18/: task_18.5.cpp  task_18.7.cpp
practices/: practice_1.cpp  practice_10.cpp  practice_10_1.cpp  practice_12.cpp  practice_13.cpp  practice_2.cpp  practice_3.cpp  practice_4.cpp  practice_5.cpp  practice_7.cpp  practice_8.cpp  practice_9.cpp  rational.cpp  rational.h
practices.cpp/: practice_1.cpp  practice_2.cpp  practice_3.cpp  practice_4.cpp
practices/practice_15/: Point.cpp  Point.h  Polinom.cpp  Polinom.h  Rational.cpp  Rational.h  main15.cpp
practices/practice_16/: Friend.cpp  Friend.h  Person.cpp  Person.h  PhoneBook.cpp  PhoneBook.h  main16.cpp
practices/practice_17/: Person.cpp  Person.h  main17.cpp
practices/practice_18/: task_18.1.cpp  task_18.2.cpp
